@@ -1,3 +1,8 @@
+Fri Jul 23 11:00:17 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtktextbtree.c (_gtk_text_line_previous_could_contain_tag): 
+	Don't iterate too far up. (#147965, Olivier Sessink)
+
 Thu Jul 22 01:21:28 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkfontsel.c (gtk_font_selection_init): Add additional
